--- a/wc-evf-form/src/components/evf-form/evf-form.component.html
+++ b/wc-evf-form/src/components/evf-form/evf-form.component.html
@@ -1,6 +1,5 @@
-@if (status !== undefined) {
+@if (status !== undefined && parsedTemplate) {
   <evf-dynamic-form
-    *ngIf="parsedTemplate"
     [template]="parsedTemplate"
     [elementLayout]="elementLayout"
     [submitted]="submitted"
