fix develop bug

--- a/reuse/code/dialogs/cancel-prescription/cancel-prescription-dialog.component.html
+++ b/reuse/code/dialogs/cancel-prescription/cancel-prescription-dialog.component.html
@@ -9,7 +9,7 @@
       ></app-error-card>
     }
     <div>
-      {{ prescription.intent | translateByIntent:{
+      {{ (prescription.intent ?? '') | translateByIntent:{
           order: 'prescription.cancel.message',
           proposal: 'proposal.cancel.message'
         }:{
