--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
@@ -129,7 +129,7 @@
             <div>
               <div class="caregiver-actions">
                 <ng-container *ngIf="!viewState.data!.performerTask?.careGiverSsin">
-                  @if(prescription.intent.toLowerCase() !== 'proposal') {
+                  @if(!isProposal(prescription.intent)) {
                     <button
                       *ngIf="prescription | canSelfAssign"
                       (click)="onSelfAssign(prescription,viewState.data!.currentUser)"
