--- a/wc-prescription-list/src/components/models/prescriptions-models-card/prescriptions-models-card.component.scss
+++ b/wc-prescription-list/src/components/models/prescriptions-models-card/prescriptions-models-card.component.scss
@@ -7,6 +7,9 @@
 .mh-margin-top-bottom{
   margin: mh.$spacing-m 0;
 }
+.mh-margin-bottom{
+  margin-bottom: mh.$spacing-m;
+}
 
 .row{
   margin: mh.$spacing-m 0;
