[UHMEP-2415]: add padding 0 to remove unnecessary padding in the title

--- a/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.scss
+++ b/wc-prescription-create/src/components/create-multiple-prescriptions/create-multiple-prescriptions.component.scss
@@ -25,6 +25,9 @@
 
 mat-expansion-panel-header {
   padding: 0;
+  &.mat-expansion-panel-header {
+    padding: 0;
+  }  
   &.no-toggle {
     pointer-events: none;
   }
